add playlist logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ qt_add_qml_module(appMusicPlayer
     SOURCES MusicPlayer/musicplayer.h MusicPlayer/musicplayer.cpp
     SOURCES PlaySong/playsong.h PlaySong/playsong.cpp
     QML_FILES Player/PlayerContent/PlayLists.qml
+    QML_FILES Player/PlayerContent/SinglePlayList.qml
+    SOURCES playlists.h playlists.cpp
 )
 
 target_link_libraries(appMusicPlayer
