--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ qt_add_qml_module(appMusicPlayer
     RESOURCES icons/trash-fill.svg
     RESOURCES icons/skip-backward-fill.svg icons/skip-forward-fill.svg
     RESOURCES icons/pause.svg
+    RESOURCES icons/stop-fill.svg
 
 )
 
